`roc = reorder-commits`

--- a/rebase/.git-rc
+++ b/rebase/.git-rc
@@ -51,6 +51,8 @@ alias garcn='g arcn'
 alias goc="g oc"
 alias goh="g oh"
 alias grhm="g rhm"
+alias groc="g roc"
+alias grocn="g rocn"
 alias gsho="g sho"
 alias gshoc="g shoc"
 alias gshon="g shon"
