shp2 = show HEAD~2, shp3

--- a/show/.git-rc
+++ b/show/.git-rc
@@ -2,12 +2,16 @@
 
 alias geq="g eq"
 alias gsh="g sh"
+alias gsfh="g sfh"
 alias gshf="g shf"
+alias gshfp="g shfp"
 alias gssf="g ssf"
 alias gshh="g shh"
 alias gshd="g shd"
 alias gshl="g shl"
 alias gshp="g shp"
+alias gshp2="g shp2"
+alias gshp3="g shp3"
 alias gshs="g shs"
 alias gshsl="g shsl"
 alias gshss="g shss"
