`push-head-upstream` aliases

--- a/push/.git-rc
+++ b/push/.git-rc
@@ -10,6 +10,9 @@ alias gpfu="g pfu"
 alias gph="g ph"
 alias gpht="g pht"
 alias gphu="g phu"
+alias gphuf="g phuf"
+alias gphufn="g phufn"
+alias gphun="g phun"
 alias gpm="g pm"
 alias gpn="g pn"
 alias gpnt="g pnt"
