graph: upstream/HEAD aliases

--- a/graph/.git-rc
+++ b/graph/.git-rc
@@ -7,18 +7,21 @@ alias ggaal="g gaal"
 alias ggal="g gal"
 alias ggala="g gala"
 alias ggg="g gg"
+alias gggc="g ggc"
+alias gghu="g ghu"
 alias ggp="g gp"
 alias ggr="g gr"
 alias ggr10="g gr10"
-alias ggrh="g grh"
 alias ggra="g gra"
 alias ggrac="g grac"
 alias ggracd="g gracd"
 alias ggracl="g gracl"
 alias ggrad="g grad"
-alias gggc="g ggc"
 alias ggrd="g grd"
 alias ggrdh="g grdh"
 alias ggrdn="g grdn"
+alias ggrh="g grh"
+alias ggrhu="g grhu"
 alias ggrl="g grl"
 alias ggrn="g grn"
+alias ggru="g gru"
