git-set-committer-date, git-set-dates

--- a/commit/.git-rc
+++ b/commit/.git-rc
@@ -63,6 +63,8 @@ alias gppr="g ppr"
 alias gpps="g pps"
 
 alias get="g et"
+alias gscd="g scd"
+alias gsds="g sds"
 alias gtr0="g tr0"
 
 alias grcdrbh="g rcdrbh"
