--- a/commit/.gitconfig
+++ b/commit/.gitconfig
@@ -25,14 +25,15 @@
   cae   = commit --allow-empty
   caem  = commit --allow-empty -m
   cm    = commit -m
+  cmab  = commit-body -a
+  cmb   = commit-body
   cmt   = !git-commit-and-tag.sh
   cmtf  = !git-commit-and-tag.sh -f
-  cne   = commit --no-edit
   cmp   = commit-multiple-parents
   cmtr  = commit-tree
   cmtrr = commit-tree-reset
-  scm   = squashed-commit-message
   cn    = commit --amend
+  cne   = commit --no-edit
   cnm   = commit --amend -m
   cap   = commit-push
   caap  = commit-push -a
@@ -57,8 +58,10 @@
   ppr   = push-parents
   pps   = push-parents
   empty-tree = hash-object -t tree /dev/null
-  et = empty-tree
-  scd = set-committer-date
-  sds = set-dates
-  tr0 = empty-tree
+  et    = empty-tree
+  sad   = set-author-date
+  scd   = set-committer-date
+  scm   = squashed-commit-message
+  sds   = set-dates
+  tr0   = empty-tree
   rcdrbh = reset-committer-date-rebase-head
