author/committer date helpers

--- a/commit/.git-rc
+++ b/commit/.git-rc
@@ -65,6 +65,7 @@ alias gppr="g ppr"
 alias gpps="g pps"
 
 alias get="g et"
+alias gsad="g sad"
 alias gscd="g scd"
 alias gsds="g sds"
 alias gtr0="g tr0"
