`{rph,rvph} = rev-parse HEAD`

--- a/rev-list/.git-rc
+++ b/rev-list/.git-rc
@@ -10,5 +10,7 @@ alias grlp="g rlp"
 alias grlp1="g rlp1"
 alias grlfp="g rlfp"
 alias grvp="g rvp"
+alias grvph="g rvph"
+alias grph="g rph"
 alias gpts="g pts"
 alias gprnts="g prnts"
