--- a/rev-list/.gitconfig
+++ b/rev-list/.gitconfig
@@ -10,6 +10,8 @@
   cc = count-commits
   tail = rev-list --max-parents=0 HEAD
   rvp = rev-parse
+  rvph = rev-parse HEAD
+  rph = rev-parse HEAD
   commits-behind = rev-list --count
   cbh = commits-behind
   parents = !git-parents.py
