--- a/cherry-pick/.git-rc
+++ b/cherry-pick/.git-rc
@@ -3,6 +3,8 @@
 alias gcp="g cp"
 alias gcpa="g cpa"
 alias gcpc="g cpc"
+alias gcpn="g cpn"
+alias gcppcd="g cppcd"
 alias gcps="g cps"
 alias gacpc="g acpc"
 alias gcpsh="g cpsh"
