--- a/commit/.gitconfig
+++ b/commit/.gitconfig
@@ -50,6 +50,10 @@
   ctrr  = commit-tree-reset
   ctrs  = commit-tree-reset
   fua   = fixup-author
+  get-author-date = !git --no-pager log -1 --format=%ad
+  get-committer-date = !git --no-pager log -1 --format=%cd
+  gad   = get-author-date
+  gcd   = get-committer-date
   om    = octomerge
   pp    = commit-push-parents
   ppa   = commit-push-parents -a
