--- a/grep/.gitconfig
+++ b/grep/.gitconfig
@@ -7,6 +7,7 @@
   gpi = grep --recurse-submodules -i
   gpl = grep --recurse-submodules -l
   gpn = grep --recurse-submodules -n
+  gpq = grep -q
   kl = kill-lines
   pie = sub  # name derived from perl -pi -e
 
