author/user/graph improvements

--- a/commit/.git-rc
+++ b/commit/.git-rc
@@ -7,6 +7,7 @@ alias gapf="g apf"
 alias gapfu="g apfu"
 alias gaapf="g aapf"
 alias gaapfu="g aapfu"
+alias gaut="g aut"
 alias gc="g c"
 alias gca="g ca"
 alias gcae="g cae"
@@ -44,6 +45,7 @@ alias gcpm="g cpm"
 alias gcapm="g capm"
 alias gcaapm="g caapm"
 alias gcpam="g cpam"
+alias gcpau="g cpau"
 alias gcpp="g cpp"
 alias gcppa="g cppa"
 alias gcppam="g cppam"
@@ -73,3 +75,5 @@ alias gsds="g sds"
 alias gtr0="g tr0"
 
 alias grcdrbh="g rcdrbh"
+alias gsau="g sau"
+alias gsaut="g saut"
