--- a/config/.gitconfig
+++ b/config/.gitconfig
@@ -11,7 +11,6 @@
        meta = yellow bold
 
 [alias]
-        aut  = author
         cf   = config
         cg   = config --global
         cfa  = config --add
@@ -57,11 +56,14 @@
         gid = get-id
         gidg = getid -g
         ggid = get-id -g
-        ue = config user.email
-        un = config user.name
+        fue = config user.email
+        fun = config user.name
+        fune = user
         gue = config --global user.email
         gun = config --global user.name
 
-        sau = set-author
-        saut = set-author
         shc = ssh-command
+        ue  = config user.email
+        un  = config user.name
+        une = user
+        usr  = user
