--- a/graph/.git-rc
+++ b/graph/.git-rc
@@ -18,6 +18,8 @@ alias ggracd="g gracd"
 alias ggracl="g gracl"
 alias ggrad="g grad"
 alias ggrd="g grd"
+alias ggre="g gre"
+alias ggrec="g grec"
 alias ggrdh="g grdh"
 alias ggrdn="g grdn"
 alias ggrh="g grh"
