--- a/commit/.gitconfig
+++ b/commit/.gitconfig
@@ -73,4 +73,5 @@
   scm   = squashed-commit-message
   sds   = set-dates
   tr0   = empty-tree
+  rcd    = reset-committer-date-rebase-head
   rcdrbh = reset-committer-date-rebase-head
