--- a/graph/.git-rc
+++ b/graph/.git-rc
@@ -16,6 +16,7 @@ alias ggra="g gra"
 alias ggrac="g grac"
 alias ggracd="g gracd"
 alias ggracl="g gracl"
+alias ggracle="g gracle"
 alias ggrad="g grad"
 alias ggrd="g grd"
 alias ggre="g gre"
