`gcph=git-cherry-pick-head`

--- a/cherry-pick/.git-rc
+++ b/cherry-pick/.git-rc
@@ -3,6 +3,7 @@
 alias gcp="g cp"
 alias gcpa="g cpa"
 alias gcpc="g cpc"
+alias gcph="g cph"
 alias gcpn="g cpn"
 alias gcppcd="g cppcd"
 alias gcps="g cps"
