`gsps=git-set-parents`

--- a/commit/.git-rc
+++ b/commit/.git-rc
@@ -70,6 +70,7 @@ alias gpps="g pps"
 
 alias get="g et"
 alias gsad="g sad"
+alias gsps="g sps"
 alias gscd="g scd"
 alias gsds="g sds"
 alias gtr0="g tr0"
