--- a/gitlab/.git-rc
+++ b/gitlab/.git-rc
@@ -10,3 +10,11 @@ export -f gitlab_api
 defn glapi gitlab_api
 
 alias glob="glab repo view --web"
+gitlab_open_jobs() {
+    web_url="$(glab repo view -F json | jq -r .web_url)"
+    jobs_url="$web_url/-/jobs"
+    open "$jobs_url"
+}
+export -f gitlab_open_jobs
+defn globj gitlab_open_jobs
+defn gloj gitlab_open_jobs
