`rir = rebase -i -r` (rebase merges)

--- a/rebase/.git-rc
+++ b/rebase/.git-rc
@@ -40,6 +40,7 @@ alias grud="g rud"
 alias grc="g rc"
 alias gri="g ri"
 alias grir="g rir"
+alias grit="g rit"
 alias grim="g rim"
 alias grq="g rq"
 alias grx="g rx"
