graph date order

--- a/graph/.git-rc
+++ b/graph/.git-rc
@@ -4,6 +4,8 @@ alias gg="g g"
 alias gga="g ga"
 alias ggaa="g gaa"
 alias ggaal="g gaal"
+alias ggad="g gad"
+alias ggadh="g gadh"
 alias ggal="g gal"
 alias ggala="g gala"
 alias ggg="g gg"
