--- a/fetch/.gitconfig
+++ b/fetch/.gitconfig
@@ -1,6 +1,7 @@
 [alias]
   f   = fetch --tags
   f1  = fetch --depth 1
+  fb  = fetch
   fd  = fetch --depth
   fd1 = fetch --depth 1
   fd2 = fetch --depth 2
