`co-="checkout --"`, `pfn="push -f -n"`, `pnf="push -n -f"`

--- a/push/.git-rc
+++ b/push/.git-rc
@@ -2,7 +2,9 @@
 alias gp="g p"
 alias gpd="g pd"
 alias gpf="g pf"
+alias gpfn="g pfn"
 alias gpl="g pl"
+alias gpnf="g pnf"
 alias gptf="g ptf"
 alias gpfo="g pfo"
 alias gpft="g pft"
