--- a/.git-rc
+++ b/.git-rc
@@ -75,7 +75,7 @@ append_subdir_to_path \
   merge merge-base mv \
   nav \
   push \
-  rebase reflog remote reset rev-list rm_ \
+  rebase reflog remote reset rev-list revert rm_ \
   show stash status submodule \
   tag \
   version \
