`rh1 = reset-hard HEAD@{1}`

--- a/reset/.git-rc
+++ b/reset/.git-rc
@@ -6,6 +6,7 @@ alias grs.="g reset ."
 alias grss="g rss"
 alias grp="g rp"
 alias grh="g rh"
+alias grh1="g rh1"
 alias grhh="g rhh"
 alias grhp="g rhp"
 alias grs="g rs"
