`git-diff-vs-parent`, `dp1`/`dp2`

--- a/diff/.git-rc
+++ b/diff/.git-rc
@@ -29,6 +29,8 @@ alias gdcno="g dcno"
 alias gdnoc="g dnoc"
 alias gdns="g dns"
 alias gdp="g dp"
+alias gdp1="g dp1"
+alias gdp2="g dp2"
 alias gdph="g dph"
 alias gdps="g dps"
 alias gdq="g dq"
