--- a/rebase/.git-rc
+++ b/rebase/.git-rc
@@ -25,12 +25,21 @@ alias grbhm="g rbhm"
 alias grbm="g rbm"
 alias grbmb="g rbmb"
 alias grbo="g rbo"
+alias grbro="g rbro"
+alias grbrio="g rbrio"
+alias grbor="g rbor"
+alias grbori="g rbori"
 alias grbot="g rbot"
 alias grbp="g rbp"
 alias rbo="g rbo"
 alias grbs="g rbs"
 alias grbsi="g rbsi"
 alias grbsin="g rbsin"
+alias grio="g rio"
+alias gro="g ro"
+alias grri="g rri"
+alias grrio="g rrio"
+alias grro="g rro"
 alias grsi="g rsi"
 alias grsin="g rsin"
 alias grbu="g rbu"
