`push-head-to`, `phf`, `phfn`, `phn`

--- a/push/.git-rc
+++ b/push/.git-rc
@@ -10,6 +10,9 @@ alias gpfo="g pfo"
 alias gpft="g pft"
 alias gpfu="g pfu"
 alias gph="g ph"
+alias gphf="g phf"
+alias gphfn="g phfn"
+alias gphn="g phn"
 alias gpht="g pht"
 alias gphu="g phu"
 alias gphuf="g phuf"
