--- a/push/.gitconfig
+++ b/push/.gitconfig
@@ -14,6 +14,9 @@
   pnf = push -n -f
   px = push-x
   ph = push-head-to
+  phf = push-head-to -f
+  phfn = push-head-to -f -n
+  phn = push-head-to -n
   pht = push-head-to
   phu = push-head-upstream
   phuf = push-head-upstream -f
