--- a/rebase/.git-rc
+++ b/rebase/.git-rc
@@ -25,6 +25,7 @@ alias grbhm="g rbhm"
 alias grbm="g rbm"
 alias grbmb="g rbmb"
 alias grbo="g rbo"
+alias grbr="g rbr"
 alias grbro="g rbro"
 alias grbrio="g rbrio"
 alias grbor="g rbor"
