--- a/rm_/.gitconfig
+++ b/rm_/.gitconfig
@@ -2,6 +2,7 @@
   rmc   = rm --cached
   rmcf  = rm --cached -f
   rmd   = rm-deleted
+  rmf   = rm -f
   rmr   = rm -r
   rmrc  = rm -r --cached
   rmlo  = rm-untracked
