--- a/github/.git-rc
+++ b/github/.git-rc
@@ -14,7 +14,20 @@ defn gha "gh api"
 defn ghj 'gh api -H "Accept: application/vnd.github+json"'
 defn ghw github-workflows.py
 
+github_url() {
+    gh repo view --json url | jq -r '.url'
+}
+export -f github_url
+defn ghou github_url
+github_open_actions() {
+    open "$(github_url)/actions"
+}
+export -f github_open_actions
+defn ghoa github_open_actions
+defn ghoj github_open_actions
+
 defn ghow gh repo view --web
+
 github_open_web_branch() {
     gh repo view --web -b "$(git current-branch)"
 }
