--- a/show/.git-rc
+++ b/show/.git-rc
@@ -20,6 +20,7 @@ alias gshp3="g shp3"
 alias gshs="g shs"
 alias gshsl="g shsl"
 alias gshss="g shss"
+alias gshw="g shw"
 alias gsn="g sn"
 alias gsln="g sln"
 alias gsnl="g snl"
