`git-fetch-x`: comma-delimited remote names

--- a/fetch/.gitconfig
+++ b/fetch/.gitconfig
@@ -1,20 +1,20 @@
 [alias]
-  f   = fetch --tags
-  f1  = fetch --depth 1
-  fb  = fetch
-  fd  = fetch --depth
-  fd1 = fetch --depth 1
-  fd2 = fetch --depth 2
-  fd3 = fetch --depth 3
-  ff  = fetch --force --tags
-  ft  = fetch --tags
-  fa  = fetch --tags --all
-  fta = fetch --tags --all
-  fo  = fetch --tags origin
-  fpr = fetch --prune
-  fu  = fetch --tags u
-  fr  = fetch --tags --recurse-submodules
-  fro = fetch --tags --recurse-submodules origin
-  fru = fetch --tags --recurse-submodules u
-  for = fetch --tags --recurse-submodules origin
-  fur = fetch --tags --recurse-submodules u
+  f   = fetch-x --tags
+  f1  = fetch-x --depth 1
+  fb  = fetch-x
+  fd  = fetch-x --depth
+  fd1 = fetch-x --depth 1
+  fd2 = fetch-x --depth 2
+  fd3 = fetch-x --depth 3
+  ff  = fetch-x --force --tags
+  ft  = fetch-x --tags
+  fa  = fetch-x --tags --all
+  fta = fetch-x --tags --all
+  fo  = fetch-x --tags origin
+  fpr = fetch-x --prune
+  fu  = fetch-x --tags u
+  fr  = fetch-x --tags --recurse-submodules
+  fro = fetch-x --tags --recurse-submodules origin
+  fru = fetch-x --tags --recurse-submodules u
+  for = fetch-x --tags --recurse-submodules origin
+  fur = fetch-x --tags --recurse-submodules u
