--- a/remote/.git-rc
+++ b/remote/.git-rc
@@ -1,6 +1,7 @@
 #!/usr/bin/env bash
 
 defn gdfr g dfr
+defn gfnr g fnr
 defn gir g ir
 defn gr g r
 defn grv g rv
@@ -20,6 +21,8 @@ defn gup g up
 defn gamr g amr
 defn grcp g rcp
 defn grgu g rgu
+defn grmp g rmp
+defn grmpe g rmpe
 defn ggu g gu
 defn grr g rr
 defn grmv g rmv
