--- a/remote/.gitconfig
+++ b/remote/.gitconfig
@@ -2,6 +2,9 @@
   r         = remote -vv
   rv        = remote -vv
 
+  rmp       = remote-path
+  rmpe      = remote-path -e
+
   dfr       = default-remote
   drb       = remote-default-branch
   rdb       = remote-default-branch
@@ -41,8 +44,11 @@
   rsh       = remote-set-head
   rsha      = remote-set-head-auto
 
+  get-url   = remote-get-url
   gru       = remote-get-url
   gu        = remote-get-url
   rgu       = remote-get-url
   sru       = remote-set-url
   rsu       = remote-set-url
+
+  fnr       = find-only-remote
