git rebase log helpers

--- a/rebase/.git-rc
+++ b/rebase/.git-rc
@@ -11,10 +11,14 @@ alias gdth="g dth"
 alias gdthc="g dthc"
 
 alias ghblr="g hblr"
+alias ghblrs="g hblrs"
 alias gmh="g mh"
 alias gpr="g pr"
 
+alias gprhl="g prhl"
 alias grb="g rb"
+alias grbcd="g rbcd"
+alias grbcda="g rbcda"
 alias grbd="g rbd"
 alias grbi="g rbi"
 alias grd="g rd"
@@ -37,6 +41,7 @@ alias grbs="g rbs"
 alias grbsi="g rbsi"
 alias grbsin="g rbsin"
 alias grio="g rio"
+alias grlrb="g rlrb"
 alias gro="g ro"
 alias grri="g rri"
 alias grrio="g rrio"
