--- a/rebase/.gitconfig
+++ b/rebase/.gitconfig
@@ -3,16 +3,20 @@
   dth     = diff-theirs
   dthc    = diff-theirs-conflicting
   hblr    = head-before-last-rebase
+  hblrs   = head-before-last-rebase %h
   pr      = pull --rebase
   rb      = rebase
   rba     = rebase --abort
   rbc     = rebase --continue
+  rbcd    = rebase-preserve-commit-dates -i
+  rbcda   = rebase-preserve-commit-dates
   crb     = checkout-and-rebase
   crh     = commit-rebase-head
   carb    = checkout-and-rebase
   corb    = checkout-and-rebase
   crbh    = commit-rebase-head
   mh      = merge-head
+  prhl    = pre-rebase-head-log
   rbh     = rebase-head
   rbhm    = rebase-head-message
   rebase-dag = rebase-dag.py
@@ -41,6 +45,7 @@
   rio     = rebase -i --onto
   rir     = rebase -i -r
   rit     = rebase -i --root
+  rlrb    = revert-last-rebase
   ro      = rebase --onto
   rri     = rebase -r -i
   rrio    = rebase -r -i --onto
