`dsw="diff --stat -w"`

--- a/diff/.git-rc
+++ b/diff/.git-rc
@@ -42,6 +42,8 @@ alias gdsp="g dsp"
 alias gdsph="g dsph"
 alias gdss="g dss"
 alias gdsu="g dsu"
+alias gdsw="g dsw"
+alias gdws="g dws"
 alias gdt="g dt"
 alias gdtp="g dtp"
 alias gdu="g du"
