--- a/diff/.gitconfig
+++ b/diff/.gitconfig
@@ -39,6 +39,8 @@
   dsc  = diff --stat --cached
   dcs  = diff --stat --cached
   dsh  = diff --stat HEAD
+  dsw  = diff --stat -w
+  dws  = diff -w --stat
   dsp  = diff --stat HEAD^
   dsph = diff --stat HEAD^..HEAD
   dsu  = diff-stat-parent
