`revert --no-edit` aliases

--- a/revert/.git-rc
+++ b/revert/.git-rc
@@ -1,2 +1,7 @@
+alias grne="g rne"
+alias grneh="g rneh"
+alias grnh="g rnh"
+alias grvne="g rvne"
+alias grvneh="g rvneh"
 alias grvt="g rvt"
 alias grvth="g rvth"
