`root-commits="rev-list --max-parents=0"`, a.k.a. `rtc`

--- a/rev-list/.gitconfig
+++ b/rev-list/.gitconfig
@@ -8,6 +8,9 @@
   ac = all-commits
   ah = all-hashes
   cc = count-commits
+  root-commits = rev-list --max-parents=0
+  rtc = root-commits
+  rtch = root-commits HEAD
   tail = rev-list --max-parents=0 HEAD
   rvp = rev-parse
   rvph = rev-parse HEAD
