`rbb=git-rebase-branches`

--- a/rebase/.git-rc
+++ b/rebase/.git-rc
@@ -17,6 +17,7 @@ alias gpr="g pr"
 
 alias gprhl="g prhl"
 alias grb="g rb"
+alias grbb="g rbb"
 alias grbcd="g rbcd"
 alias grbcda="g rbcda"
 alias grbd="g rbd"
