--- a/remote/.gitconfig
+++ b/remote/.gitconfig
@@ -28,10 +28,11 @@
   cd        = copy-diffs
   lgp       = load-github-prs
   lpr       = load-github-prs
-  lsr       = ls-remote
-  lsrt      = ls-remote --tags
-  lrh       = ls-remote --heads
-  lrt       = ls-remote --tags
+  lsr       = !ls-remote
+  lsrh      = !ls-remote --heads
+  lsrt      = !ls-remote --tags
+  lrh       = !ls-remote --heads
+  lrt       = !ls-remote --tags
   mr        = mirror-remote
   up        = unpack-and-apply-diffs
   amr       = add-mirror-remote
