`git-throw.py`: always commit `-a`

--- a/rebase/.git-rc
+++ b/rebase/.git-rc
@@ -80,10 +80,9 @@ alias gshrm="g shrm"
 alias gsqsq="g sqsq"
 
 alias gtw="g tw"
-alias gtwa="g twa"
-alias gtwap="g twap"
-alias gtwap2="g twap2"
-alias gtwap3="g twap3"
+alias gtw="g tw"
+alias gtwp="g twp"
+alias gtwp2="g twp2"
+alias gtwp3="g twp3"
 alias gtwh="g twh"
 alias gtwhn="g twhn"
-alias gtwp="g twp"
