--- a/commit/.git-rc
+++ b/commit/.git-rc
@@ -24,6 +24,8 @@ alias gcfns="g cfns"
 alias gcm="g cm"
 alias gcmab="g cmab"
 alias gcmb="g cmb"
+alias gcmf="g cmf"
+alias gcmfa="g cmfa"
 alias gcmp="g cmp"
 alias gcmt="g cmt"
 alias gcmtf="g cmtf"
