`dcw="diff --cached -w"`

--- a/diff/.git-rc
+++ b/diff/.git-rc
@@ -16,6 +16,7 @@ alias gdft="g dft"
 alias gdc="g dc"
 alias gdcp="g dcp"
 alias gdcss="g dcss"
+alias gdcw="g dcw"
 alias gdg="g dg"
 alias gdgif="g dgif"
 alias gdh="g diff HEAD"
