`caa="commit -a --amend"`

--- a/commit/.git-rc
+++ b/commit/.git-rc
@@ -10,6 +10,7 @@ alias gaapfu="g aapfu"
 alias gaut="g aut"
 alias gc="g c"
 alias gca="g ca"
+alias gcaa="g caa"
 alias gcae="g cae"
 alias gcaem="g caem"
 alias gcam="g cam"
