`pftn="push -f --tags -n"`

--- a/push/.git-rc
+++ b/push/.git-rc
@@ -8,6 +8,7 @@ alias gpnf="g pnf"
 alias gptf="g ptf"
 alias gpfo="g pfo"
 alias gpft="g pft"
+alias gpftn="g pftn"
 alias gpfu="g pfu"
 alias gph="g ph"
 alias gphf="g phf"
