`ct=commit-tree`, `ctr=commit-tree-reset`

--- a/commit/.git-rc
+++ b/commit/.git-rc
@@ -54,9 +54,8 @@ alias gcppa="g cppa"
 alias gcppam="g cppam"
 alias gcppm="g cppm"
 alias gcsp="g csp"
+alias gct="g ct"
 alias gctr="g ctr"
-alias gctrr="g ctrr"
-alias gctrs="g ctrs"
 
 alias gfua="g fua"
 alias ggad="g gad"
