rebase-head-log helpers

--- a/rebase/.git-rc
+++ b/rebase/.git-rc
@@ -16,6 +16,9 @@ alias gmh="g mh"
 alias gpr="g pr"
 
 alias gprhl="g prhl"
+alias gprhlh="g prhlh"
+alias grhl="g rhl"
+alias grhlh="g rhlh"
 alias grb="g rb"
 alias grbb="g rbb"
 alias grbcd="g rbcd"
