--- a/rebase/.gitconfig
+++ b/rebase/.gitconfig
@@ -60,8 +60,10 @@
   rhm     = rebase-head-message
   rim     = rebase -i master
   rq      = rebase-sequence
+  ar      = add-rebase-continue
   arc     = add-rebase-continue
   arcn    = add-rebase-continue-no-edit
+  arn     = add-rebase-continue-no-edit
   oc      = original-commit
   oh      = original-head
   roc     = reorder-commits
